--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>GRID</title>
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/temmytope88/grid/master/Grid.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="Grid.css" type="text/css" media="all" />
   </head>
   <body>
     <div class="container">
